--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
 <title>Sárkányhajózás</title>
 <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="sarkany.css">
+    <link rel="stylesheet" href="stilus.css">
 </head>
 <body>
     <div id="leiras">
@@ -41,7 +40,7 @@
      <img src="verseny.jpg" alt="Rajt utáni pillanatok" title="Rajt utáni pillanatok"> 
     Fej-fej mellett a csapatok az első 200m után.
         </div>
-                                       <h2>Versenyszabályok</h2>
+    <h2>Versenyszabályok</h2>
 <ul>
     <li> táv: 200 m és 500 m, 1000 m, 2000 m (körpályán)</li>
     <li> osztályok: nyílt (általában tiszta férfi), női és vegyes osztály. A vegyes legénységben minimum 8, maximum 12 nőnek kell eveznie. A dobos és a kormányos lehet ellenkező nemű is. 40 év feletti (senior) és 18 év alatti (junior).</li>
