--- a/sarkanyhajo.html
+++ b/sarkanyhajo.html
@@ -3,7 +3,7 @@
 <head>
 <title>Sárkányhajózás</title>
 <meta charset="utf-8">
-    <link rel="stylesheet" href="stilus.css">
+    <link rel="stylesheet" href="sarkany.css">
 </head>
 <body>
     <div id="leiras">
